2005-02-04  Jeremy Handcock  <handcock@redhat.com>

	* imageheader.cc: Update license header.
	* imageheader.h: Likewise.
	* opinfo.cc: Likewise.
	* opinfo.h: Likewise.
	* oprofiledb.cc: Likewise.
	* oprofiledb.h: Likewise.
	* opxml.cc: Likewise.
	* oxmlstream.h: Likewise.
	* profileimage.cc: Likewise.
	* sample.cc: Likewise.
	* sample.h: Likewise.
	* samplefile.cc: Likewise.
	* samplefile.h: Likewise.
	* session.cc: Likewise.
	* session.h: Likewise.
	* sevent.cc: Likewise.
	* sevent.h: Likewise.
	* stable.cc: Likewise.
	* stable.h: Likewise.
	* symbol.cc: Likewise.
	* symble.h: Likewise.
	* xmlbuf.cc: Likewise.
	* xmlbuf.h: Likewise.
	* xmlfmt.cc: Likewise.
	* xmlfmt.h: Likewise.
	* xmltag.cc: Likewise.
	* xmltag.h: Likewise.

2005-02-04  Keith Seitz  <keiths@redhat.com>

	* Makefile: Update dependencies and remove util.h and util.cc.
	* build.xml: Remove util.cc from build objects.
	* utl.h: Remove.
	* util.cc: Remove.
	* imageheader.h (imageheader): Take samplefile* parameter for constructor.
	(get_cpu_type): Rename to ...
	(get_cpu): ... this. Returns a string instead of OProfile's internal type.
	(get_event): Return string instead of u32.
	(get_count): Likewise.
	(get_unit_mask): Likewise.
	(get_cpu_speed): Remove dependency on OProfile internal data. For now,
	always returns zero until we can get a safer way to obtain this information.
	(_header): Remove variable.
	(_sfile): New variable.
	* imageheader.cc (imageheader): Now takes samplefile* as parameter.
	(operator<<): Use imageheader::get_cpu.
	* opinfo.h: Remove "optional" configury for older versions of OProfile. That
	dream is gone.
	(get_cpu_frequency): Remove. This would never make sense if we could do this
	analyze files from a remote system.
	* opinfo.cc: Remove "optional" configury, too.
	(get_cpu_frequency): Likewise.
	(operation<<): Make num-counters a single line. Now matches spec.
	Don't output old defaults or frequency.
	* oprofiledb.h (get_header): Remove.