@@ -1,3 +1,10 @@
+2005-04-04  Keith Seitz  <keiths@redhat.com>
+
+	* oprofiledb.h (class oprofile_db): samples_odb_t is now called odb_t.
+	odb_hash.h is now odb.h.
+	* oprofiledb.cc (_open_db): Ditto the odb_t rename.
+	(samples_odb_travel): Likewise.
+
 2005-02-04  Jeremy Handcock  <handcock@redhat.com>
 
 	* imageheader.cc: Update license header.
